--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,6 @@ kotlinxSerializationJSON = "1.7.2"
 kotlinxCoroutines = "1.8.1"
 kotlinLoggingJvmVersion = "7.0.5"
 logbackClassicVersion = "1.5.18"
-slf4jSimpleVersion = "2.0.17"
 
 [libraries]
 kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -18,12 +17,11 @@ kotlinxSerialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-j
 kotlinxCoroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 kotlinLoggingJvm = { module = "io.github.oshai:kotlin-logging-jvm", version.ref = "kotlinLoggingJvmVersion" }
 kotlinLoggingLogback = { module = "ch.qos.logback:logback-classic", version.ref = "logbackClassicVersion" }
-kotlinLoggingSlf4j = { module = "org.slf4j:slf4j-simple", version.ref = "slf4jSimpleVersion" }
 
 # Libraries can be bundled together for easier import
 [bundles]
 kotlinxEcosystem = ["kotlinxDatetime", "kotlinxSerialization", "kotlinxCoroutines"]
-logging = ["kotlinLoggingJvm", "kotlinLoggingSlf4j"]
+logging = ["kotlinLoggingJvm", "kotlinLoggingLogback"]
 
 [plugins]
 kotlinPluginSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
